# ucd-csci2312-pa2

./: CMakeLists.txt  CSV.txt  Cluster.cpp  Cluster.h  DimensionalityMismatchEx.cpp  DimensionalityMismatchEx.h  Exceptions.cpp  Exceptions.h  KMeans.cpp  KMeans.h  OutOfBoundEx.cpp  OutOfBoundEx.h  Point.cpp  Point.h  README.md  RemoveFromEmptyEx.cpp  RemoveFromEmptyEx.h  output.csv  pa1.cpp  points1.csv  t.csv  test.csv  tt.csv
